--- a/index.html
+++ b/index.html
@@ -5,6 +5,24 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link href="time.css" rel="stylesheet">
 <title>Time.</title>
+<meta property="og:locale" content="en-US,zh_CN,ja,fr">
+<meta name="applicable-device" content="pc,mobile">
+<meta name="robots" content="index, follow">
+<meta name="org" content="Waste Time">
+<meta property="article:tag" content="Waste Time">
+<meta property="og:site_name" content="Waste Time">
+<meta property="og:type" content="website">
+<meta property="og:title" content="Waste Time">
+<meta property="og:description" content="The time you waste is slipping away second by second.">
+<meta property="og:image" content="https://yuki.art/img/avatar.jpg">
+<meta property="og:url" content="https://time.yuki.art/">
+<meta name="twitter:card" content="summary">
+<meta name="twitter:site" content="@Asada_Yuki_Maso">
+<meta name="twitter:creator" content="@Asada_Yuki_Maso">
+<meta name="twitter:title" content="Waste Time">
+<meta name="twitter:url" content="https://time.yuki.art/">
+<meta name="twitter:description" content="The time you waste is slipping away second by second.">
+<meta name="twitter:image" content="https://yuki.art/img/avatar.jpg">
 <style>
 .box2 {
     width: 100%;
