--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <link href="time.css" rel="stylesheet">
 <title>Time.</title>
 <meta property="og:locale" content="en-US,zh_CN,ja,fr">
-<meta name="applicable-device" content="pc">
+<meta name="applicable-device" content="pc,mobile">
 <meta name="robots" content="index, follow">
 <meta name="org" content="Waste Time">
 <meta property="article:tag" content="Waste Time">
