--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 <meta charset="UTF-8">
+<link rel="shortcut icon" href="./Wallpaper_Engine_logo.png">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link href="time.css" rel="stylesheet">
 <title>Time.</title>
